--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -14,10 +14,13 @@
 .dropdown-menu > li:hover > .dropdown-submenu {
   display: block;
 }
-.navbar {
+/* .navbar {
   width: 100%;
   margin-top: 40px;
   padding: 25px;
   display: flex;
   justify-content: space-between;
+} */
+.btn_ul{
+  padding-right: 20px !important;
 }
