--- a/src/Components/UpperFooter.css
+++ b/src/Components/UpperFooter.css
@@ -2,7 +2,29 @@
   /* margin-top:100px; */
   /* margin-bottom: 0px; */
   padding: 35px;
-  background: black;
+  background: #000000;
   border-top: 1px solid #ac7800;
   border-bottom: 1px solid #cc930f;
+}
+.row {
+  color: white;
+}
+a {
+  color: white;
+}
+p {
+  text-align: left;
+}
+li {
+  text-align: left;
+  margin: 10px;
+}
+i {
+  padding-right: 20px;
+  color: #f8a20c;
+  font-size: 18px;
+  line-height: 1;
+}
+button {
+  border-radius: 3px !important;
 }
